--- a/AutoService/Properties/Resources.resx
+++ b/AutoService/Properties/Resources.resx
@@ -124,11 +124,17 @@
   <data name="warning" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\warning.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hexagon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hexagon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="uzcenGpp_400x400" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\uzcenGpp_400x400.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="on-off-sign-orange-icon-black-vector-13391631" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\on-off-sign-orange-icon-black-vector-13391631.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="hexagon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hexagon (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="add" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="a4140429df6844298f03f6a7bd509b49" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\a4140429df6844298f03f6a7bd509b49.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -136,7 +142,7 @@
   <data name="hexagonbg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hexagonbg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="uzcenGpp_400x400" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\uzcenGpp_400x400.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="photo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\photo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
